# yap

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  maintain.sh  readme.md  setup.sh  vercel.json
.cache/: tysm-v1-chat_request-100004551108270249.zstd  (+722157 more)
clean-nlp-data/: Cargo.toml
clean-nlp-data/src/: classify.rs  main.rs  utils.rs
generate-data/: Cargo.toml
generate-data/data/arb/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/deu/: banned_sentences.txt  banned_sentences_ai.txt  extra_multiword_terms.txt  extra_multiword_terms_ai.txt  pronunciations.tsv
generate-data/data/deu/sentence-sources/extra/: manual.txt
generate-data/data/deu/sentence-sources/movies/: metadata.jsonl
generate-data/data/deu/sentence-sources/movies/subtitles/: tt0093779.jsonl  tt0096018.jsonl  tt0097165.jsonl  tt0097216.jsonl  tt0097499.jsonl  tt0097576.jsonl  tt0097958.jsonl  tt0099685.jsonl  tt0104797.jsonl  tt0105236.jsonl  tt0119698.jsonl  tt0120338.jsonl  tt0120737.jsonl  tt0128445.jsonl  tt0133093.jsonl  tt0137523.jsonl  tt0167260.jsonl  tt0167261.jsonl  tt0181875.jsonl  tt0230011.jsonl  tt0241527.jsonl  tt0245429.jsonl  tt0265666.jsonl  tt0299658.jsonl  tt0320661.jsonl  tt0347149.jsonl  tt0363163.jsonl  tt0382932.jsonl  tt0405094.jsonl  tt0417741.jsonl  tt0460989.jsonl  tt0499549.jsonl  tt0780504.jsonl  tt0805564.jsonl  tt0816692.jsonl  tt10374610.jsonl  tt12300742.jsonl  tt1375666.jsonl  tt1392190.jsonl  tt14107334.jsonl  (+24 more)
generate-data/data/deu/sentence_sources/tatoeba/: 2025-09-27.tsv
generate-data/data/eng/: banned_sentences_ai.txt  extra_multiword_terms.txt  extra_multiword_terms_ai.txt
generate-data/data/eng/sentence-sources/raw/: list.jsonl
generate-data/data/fra/: banned_sentences.txt  banned_sentences_ai.txt  banned_words.jsonl  extra_multiword_terms.txt  extra_multiword_terms_ai.txt  pronunciations.tsv
generate-data/data/fra/sentence-sources/extra/: manual.txt
generate-data/data/fra/sentence-sources/movies/: metadata.jsonl
generate-data/data/fra/sentence-sources/movies/subtitles/: tt0093779.jsonl  tt0096018.jsonl  tt0097165.jsonl  tt0097216.jsonl  tt0097499.jsonl  tt0097576.jsonl  tt0099685.jsonl  tt0104797.jsonl  tt0105236.jsonl  tt0108500.jsonl  tt0119698.jsonl  tt0120338.jsonl  tt0120737.jsonl  tt0120915.jsonl  tt0128445.jsonl  tt0137523.jsonl  tt0167260.jsonl  tt0167261.jsonl  tt0181875.jsonl  tt0211915.jsonl  tt0230011.jsonl  tt0241527.jsonl  tt0245429.jsonl  tt0265666.jsonl  tt0295297.jsonl  tt0299658.jsonl  tt0304141.jsonl  tt0320661.jsonl  tt0330373.jsonl  tt0347149.jsonl  tt0363163.jsonl  tt0382932.jsonl  tt0417741.jsonl  tt0460989.jsonl  tt0499549.jsonl  tt0780504.jsonl  tt0805564.jsonl  tt0848228.jsonl  tt12300742.jsonl  tt14107334.jsonl  (+29 more)
generate-data/data/heb/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/hin/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/ita/: pronunciations.tsv
generate-data/data/ita/sentence-sources/extra/: manual.txt
generate-data/data/ita/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/jpn/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/kor/: banned_sentences_ai.txt  extra_multiword_terms_ai.txt  extra_pronunciations.tsv  pronunciations.tsv
generate-data/data/nld/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/por/sentence-sources/extra/: manual.txt
generate-data/data/por/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/rus/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/spa/: banned_sentences_ai.txt  banned_words.jsonl  extra_multiword_terms.txt  extra_multiword_terms_ai.txt  extra_pronunciations.tsv
generate-data/data/spa/sentence-sources/extra/: manual.txt
generate-data/data/spa/sentence-sources/movies/: metadata.jsonl
generate-data/data/spa/sentence-sources/movies/subtitles/: tt0093779.jsonl  tt0096018.jsonl  tt0097165.jsonl  tt0097216.jsonl  tt0097499.jsonl  tt0097576.jsonl  tt0099685.jsonl  tt0104797.jsonl  tt0105236.jsonl  tt0111161.jsonl  tt0119698.jsonl  tt0120338.jsonl  tt0120737.jsonl  tt0128445.jsonl  tt0137523.jsonl  tt0167260.jsonl  tt0167261.jsonl  tt0181875.jsonl  tt0230011.jsonl  tt0241527.jsonl  tt0245429.jsonl  tt0265666.jsonl  tt0299658.jsonl  tt0320661.jsonl  tt0347149.jsonl  tt0363163.jsonl  tt0382932.jsonl  tt0460989.jsonl  tt0499549.jsonl  tt0780504.jsonl  tt0805564.jsonl  tt12300742.jsonl  tt1396484.jsonl  tt14107334.jsonl  tt14846026.jsonl  tt1630029.jsonl  tt16311594.jsonl  tt1856101.jsonl  tt19847976.jsonl  tt20215234.jsonl  (+26 more)
generate-data/data/swe/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/data/tatoeba/: links.csv  sentences.csv
generate-data/data/tha/sentence-sources/tatoba/: 2025-10-27.tsv
generate-data/nlp/: main.py
generate-data/src/: dict.rs  disambiguation_practice.rs  frequencies.rs  google_translate.rs  lexide_token.rs  lib.rs  main.rs  morphology_analysis.rs  nlp.rs  opensubtitles.rs  pronunciation_patterns.rs  pronunciations.rs  proper_noun_filter.rs  read_anki.rs  target_sentences.rs  tatoeba.rs  wiktionary.rs  wiktionary_conjugations.rs  wiktionary_terms.rs
generate-data/src/wiktionary-examples/deu/: Frau.txt  Hund.txt  Kind.txt  gehen.txt  sein.txt  trinken.txt
generate-data/src/wiktionary-examples/fra/: aller.txt  avoir.txt  boire.txt  etre.txt  pouvoir.txt
generate-data/src/wiktionary-examples/spa/: beber.txt  moverse.txt  ser.txt  tener.txt  venir.txt
libraries/course-spot-check/: Cargo.toml
libraries/course-spot-check/src/: main.rs
libraries/weapon/: Cargo.toml  readme.md  sync.md
libraries/weapon/src/: lib.rs  opfs.rs  supabase.rs
libraries/weapon/src/data_model/: 4-event-stream-store.rs  5-stream-store.rs
opensubtitles-downloader/: Cargo.toml
opensubtitles-downloader/src/: main.rs
yap-ai-backend/: Cargo.toml
yap-ai-backend/src/: main.rs
yap-ai-backend/src/email_templates/: new_follower.html  new_follower.txt
yap-frontend-rs/: Cargo.toml
yap-frontend-rs/src/: audio.rs  challenges.rs  deck_selection.rs  directories.rs  language_pack.rs  lib.rs  next_cards.rs  notifications.rs  profile.rs  simulation.rs  utils.rs
(+219259 files in other folders)
