[package]
name = "clean-nlp-data"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
language-utils = { path = "../language-utils" }
anyhow = "1.0.98"
rand = "0.9.1"
tysm.workspace = true
schemars.workspace = true
sentence-sampler = { path = "../libraries/sentence-sampler" }
tokio.workspace = true
futures.workspace = true
generate-data = { path = "../generate-data" }
