[package]
name = "generate-data"
version = "0.1.0"
edition = "2024"

[dependencies]
zip.workspace = true
rusqlite.workspace = true
html2text.workspace = true
tempfile.workspace = true
log = "0.4.27"
markdown-tables.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tysm.workspace = true
schemars.workspace = true
language-utils = { path = "../language-utils" }
sentence-sampler = { path = "../libraries/sentence-sampler" }
futures = "0.3.31"
env_logger = "0.11.8"
anyhow = "1.0.98"
rand_chacha = "0.9.0"
rand = "0.9.1"
rkyv.workspace = true
xxhash-rust.workspace = true
indexmap.workspace = true
itertools = "0.14.0"
lasso.workspace = true
reqwest.workspace = true
html-escape.workspace = true
unicode-normalization.workspace = true
dashmap = { version = "6.1.0", features = ["serde"] }
indicatif.workspace = true
