[package]
name = "opensubtitles-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
subparse = "0.7"
regex = "1.11"
dotenv = "0.15"
language-utils = { path = "../language-utils" }
clap = { version = "4", features = ["derive"] }
futures = {workspace = true}
