[package]
name = "course-spot-check"
version = "0.1.0"
edition = "2024"

[dependencies]
yap-frontend-rs = { path = "../../yap-frontend-rs" }
language-utils = { path = "../../language-utils" }
weapon = { path = "../weapon" }
tysm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0"
env_logger = { workspace = true }
log = { workspace = true }
rkyv = { workspace = true }
